fix modal z-index

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -541,7 +541,7 @@ code a:active {
   flex-shrink: 3;
   justify-content: center;
   animation: fade-in 0.2s ease-out;
-  z-index: (--layer-modal-overlay);
+  z-index: var(--layer-modal-overlay);
 }
 
 .modal {
@@ -556,7 +556,7 @@ code a:active {
   animation: slide-up 0.2s var(--anim-elastic);
   box-shadow: 0 0.375rem 1rem var(--color-modal-shadow),
     0 0 0 1px var(--color-modal-border);
-  z-index: (--layer-modal);
+  z-index: var(--layer-modal);
   font-size: var(--font-size-medium);
 }
 
